fix: content overlapping
fixed z-index

--- a/sarakel/src/HomePage/Components/LogIn/LogIn.css
+++ b/sarakel/src/HomePage/Components/LogIn/LogIn.css
@@ -4,8 +4,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0,0,0,0.3);
-    z-index: 999;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 99999;
   }
   
   .login-modal {
@@ -130,3 +130,76 @@
     text-decoration: none;
 }
 
+
+@media (max-width: 768px) {
+  .login-modal {
+    max-width: 90%;
+    max-height: 90%;
+  }
+
+  .login-content {
+    margin: 20px;
+  }
+
+  .login-close-btn {
+    margin-right: 10px;
+  }
+
+  .login-google-oauth {
+    width: 100%;
+  }
+
+  #username,
+  #password {
+    width: 100%;
+  }
+
+  .login-btn-final {
+    width: 100%;
+  }
+}
+
+/* For screens smaller than 768px*/
+@media (max-width: 768px) {
+  .login-modal {
+    max-width: 90%;
+    max-height: 75%;
+  }
+
+  .login-content {
+    margin: 20px;
+  }
+
+  .login-close-btn {
+    margin-right: 10px;
+  }
+
+  .login-google-oauth {
+    width: 100%;
+  }
+
+  #username,
+  #password {
+    width: 100%;
+  }
+
+  .login-btn-final {
+    width: 100%;
+  }
+}
+
+/* For screens between 768px and 1024px*/
+@media (min-width: 768px) and (max-width: 1024px) {
+  .login-modal {
+    max-width: 70%;
+    max-height: 80%;
+  }
+}
+
+/* For screens larger than 1024px*/
+@media (min-width: 1024px) {
+  .login-modal {
+    max-width: 550px;
+    max-height: 630px;
+  }
+}
