--- a/sarakel/src/HomePage/Components/SignUp/SignUpTwo.css
+++ b/sarakel/src/HomePage/Components/SignUp/SignUpTwo.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
+    z-index: 99999;
   }
   
   .signuptwo-modal {
